# excel_bot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  pytest.ini  run_bot.bat  run_bot.py  run_bot_gui.bat  run_bot_gui.py  run_bot_gui.vbs  setup.py  setup_test_package.bat
.github/workflows/: ci.yml  release.yml
excel_bot/: __init__.py  auth.py  bot_main.py  config.json  config.py  events.py  gui.py  notifications.py  run_bot.py  users.json
installer/: build_setup.ps1  launch_excel_bot.bat  windows_setup.py
scripts/: auth.py  bot_main.py  config.py  create_sample_input.py  events.py  notifications.py
tests/: test_bot_main_benchmark.py  test_config_and_auth_loading.py  test_notifications.py  test_run_bot_opening.py  test_run_bot_status.py  test_windows_setup_installer.py
