[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel_bot"
version = "0.1.6"
description = "Cross-platform Excel Automation Bot with logging, events, and notifications"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sung Jin Woo" }]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
gui = ["PySide6>=6.7"]

[project.scripts]
excel-bot = "excel_bot.run_bot:main"
excel-bot-gui = "excel_bot.gui:main"

[tool.setuptools]
packages = ["excel_bot"]

[tool.setuptools.package-data]
excel_bot = ["config.json", "users.json"]
